{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 20,
  "lineage": "06f54d86-f033-45e7-e80e-a8789112edea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "connections_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010025084339:internet-gateway/igw-073b4018f8195f7f0",
            "id": "igw-073b4018f8195f7f0",
            "owner_id": "010025084339",
            "region": "ap-south-1",
            "tags": {
              "Name": "connections-igw"
            },
            "tags_all": {
              "Name": "connections-igw"
            },
            "vpc_id": "vpc-01756919876e44cc1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.connections_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "connections_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010025084339:route-table/rtb-0ecd45c57d09f3b58",
            "id": "rtb-0ecd45c57d09f3b58",
            "owner_id": "010025084339",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073b4018f8195f7f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "connections-route-table"
            },
            "tags_all": {
              "Name": "connections-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01756919876e44cc1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connections_igw",
            "aws_vpc.connections_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006b0fb9b72cd5164",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ecd45c57d09f3b58",
            "subnet_id": "subnet-031783ae23d94160c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connections_igw",
            "aws_route_table.connections_route_table",
            "aws_subnet.connections_subnet",
            "aws_vpc.connections_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a140e7ec274d6468",
            "region": "ap-south-1",
            "route_table_id": "rtb-0ecd45c57d09f3b58",
            "subnet_id": "subnet-0e158b3ef8eed1985"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.connections_igw",
            "aws_route_table.connections_route_table",
            "aws_subnet.connections_subnet",
            "aws_vpc.connections_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "connections_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010025084339:security-group/sg-01be443fc3ab3db72",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01be443fc3ab3db72",
            "ingress": [],
            "name": "terraform-20250825150232862500000002",
            "name_prefix": "terraform-",
            "owner_id": "010025084339",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "connections-cluster-sg"
            },
            "tags_all": {
              "Name": "connections-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01756919876e44cc1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "010025084339",
            "id": "sg-01be443fc3ab3db72",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.connections_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "connections_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010025084339:security-group/sg-054b350f0420ae639",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054b350f0420ae639",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250825150232861900000001",
            "name_prefix": "terraform-",
            "owner_id": "010025084339",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "connections-node-sg"
            },
            "tags_all": {
              "Name": "connections-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01756919876e44cc1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "010025084339",
            "id": "sg-054b350f0420ae639",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.connections_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "connections_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010025084339:subnet/subnet-031783ae23d94160c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031783ae23d94160c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010025084339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "connections-subnet-0"
            },
            "tags_all": {
              "Name": "connections-subnet-0"
            },
            "vpc_id": "vpc-01756919876e44cc1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "010025084339",
            "id": "subnet-031783ae23d94160c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.connections_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010025084339:subnet/subnet-0e158b3ef8eed1985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e158b3ef8eed1985",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "010025084339",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "connections-subnet-1"
            },
            "tags_all": {
              "Name": "connections-subnet-1"
            },
            "vpc_id": "vpc-01756919876e44cc1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "010025084339",
            "id": "subnet-0e158b3ef8eed1985",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.connections_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "connections_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:010025084339:vpc/vpc-01756919876e44cc1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d61ac1178106f8b",
            "default_route_table_id": "rtb-06e3479357e4c0e3d",
            "default_security_group_id": "sg-06c73ef6be1a8aeca",
            "dhcp_options_id": "dopt-0c0cfa5f0779646c6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01756919876e44cc1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e3479357e4c0e3d",
            "owner_id": "010025084339",
            "region": "ap-south-1",
            "tags": {
              "Name": "connections-vpc"
            },
            "tags_all": {
              "Name": "connections-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}